# ArcPiStreaming

./: .gitignore  Client.py  Consts.py  Protocol.py  README.md  ReceiveStream.py  SendStream.py  Server.py  cameraStream.py  original.txt  pyproject.toml  read.py  recieved.txt  streamRecieve.py  streamSend.py
afpistream/: Client.py  Protocol.py  Server.py
pistream/: Client.py  Network.py  Protocol.py  Server.py
sample/: HOWTO.txt  ReceiveStream.py  SendStream.py
