[tool.poetry]
name = "afpistream"
version = "1.0.3"
description = "Image and video streaming over WIFI from a Raspberry Pi camera. Intended for drone photography"
authors = ["Animus Ferus Blue"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.7.0.0"
numpy = "^1.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
